Prod/src/objects/SST_Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>West_Virginia_Remote__c</fullName>
        <label>West Virginia Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>West_Virginia_nv_reason__c</fullName>
        <label>West Virginia nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>West_Virginia_v__c</fullName>
        <label>West Virginia v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_are_you_joining_the_SST_program__c</fullName>
        <label>Why are you joining the SST program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free monthly returns where I&apos;m an SST Volunteer</fullName>
                </value>
                <value>
                    <fullName>Certified rates, boundaries, and tax regions</fullName>
                </value>
                <value>
                    <fullName>To quickly register and file returns in 24 states</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wisconsin_Filing_Frequency__c</fullName>
        <label>Wisconsin Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wisconsin_Registered__c</fullName>
        <label>Wisconsin- Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wisconsin_Remote__c</fullName>
        <label>Wisconsin Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wisconsin_nv_reason__c</fullName>
        <label>Wisconsin nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wisconsin_v__c</fullName>
        <label>Wisconsin v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wyoming_Filing_Frequency__c</fullName>
        <label>Wyoming Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wyoming_Registered__c</fullName>
        <label>Wyoming- Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wyoming_Remote__c</fullName>
        <label>Wyoming Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wyoming_nv_reason__c</fullName>
        <label>Wyoming nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wyoming_v__c</fullName>
        <label>Wyoming v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>introduced_to_the_SST_program__c</fullName>
        <label>introduced to the SST program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara Associate</fullName>
                </value>
                <value>
                    <fullName>SST Website</fullName>
                </value>
                <value>
                    <fullName>Business Community</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>joining_Other_SST_program__c</fullName>
        <label>joining Other SST program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SST Onboarding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SSN__c</columns>
        <columns>FEIN__c</columns>
        <columns>FEINM__c</columns>
        <columns>Business_Entity_Type__c</columns>
        <columns>DBA_Business_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Company_Corporate_Address_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SST-{0000}</displayFormat>
        <label>SST Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SST Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>